--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.4.0",
     "@headlessui/vue": "^1.7.16",
-    "firebase": "^10.6.0",
+    "firebase": "^10.7.1",
     "vue": "^3.3.4",
     "vue-final-modal": "^4.5.3",
     "vue-gtag": "^2.0.1",
